# bfg

./: .gitignore  .gitmodules  .magicrc  CMakeLists.txt  INSTALL.md  LICENSE  README.md  TODO.txt  debug_notes  gf180_mux.gds  gf180_mux.pb  gf180_mux.pb.txt  gf180mcu.technology.pb  gf180mcu.technology.pb.txt  gf180mcuA.magicrc  gf180mcuC.magicrc  klayout_drc_report.txt  library.gds  library.pb  library.pb.txt  router_service_poke.sh  router_service_test_add_routes.sh  sky130.pdk_info.pb.txt  sky130.primitives.pb  sky130.primitives.pb.txt  sky130.technology.pb  sky130.technology.pb.txt  sky130A.magicrc  sky130_drc.txt  sky130hd.pb  todo.txt  watch_build.sh
.github/workflows/: ci.yml
docker/: Dockerfile  docker-compose.yml
experiments/generator_space/: .gitignore  Makefile  README.md  requirements.txt  sweep_generator.py
experiments/lut_analysis/: Makefile  lut.spef.sp  plot.py
experiments/lut_analysis_2025/: get_std_cell_spice.sh  lut_test.sp  make_lut_read_signals.py
experiments/lut_analysis_feb2025/: Makefile  fake_lut.sp  lut_test.sp  lut_test.sp.mt0  make_lut_read_signals.py  package.sp  plot.py
experiments/lut_mux_analysis/: README.md  lut.sp
explorer/: .gitignore  FORM_FIELDS.md  QUICKSTART.md  README.md  package-lock.json  package.json
explorer/backend/: .env.example  package.json  tsconfig.json
explorer/frontend/: index.html  package.json  vite.config.ts
explorer/shared/: package.json  tsconfig.json
proto/: compass_direction.proto  design_rules.proto  edge_list.proto  inflator_rules.proto  layer_info.proto
proto/parameters/: carry1.proto  fabric.proto  interconnect.proto  interconnect_wire_block.proto  lut_b.proto  reduced_slice.proto  s44.proto  sky130_carry1.proto  sky130_decap.proto  sky130_dfxtp.proto  sky130_interconnect_mux1.proto  sky130_interconnect_mux6.proto  sky130_mux.proto  sky130_passive_mux3.proto  sky130_split_buffer.proto  sky130_transmission_gate.proto  sky130_transmission_gate_stack.proto  sky130_xor2.proto  slice.proto
scripts/: README.md  build.sh  line_count_by_stem.py  proto2cpp.py  requirements.txt
services/: router_service.proto
simulation/: LutB.sp  README.md  Sky130SplitBuffer.sp  just_netlist.py  netlist.py  package.ngspice.sp  package.sp  sky130_lutb.py  sky130_mux.py  sky130_xor2.py  util.py
simulation/manual/: dut  netlist.sp  plot.py  test_fet_chain.sp  tran.sp  tran.sp.csv
simulation/manual_lutb/: columns.txt  dut  gnuplot.s  tran.sp  tran.sp.csv  tran.sp.mt0
simulation/scratch/: dut  plot.py  tran.sp  tran.sp.csv  tran.sp.mt0
simulation/scratch.last/: dut  gnuplot.s  tran.sp  tran.sp.csv
simulation/scratch_buf/: gnuplot.s  tran.sp  tran.sp.csv
simulation/scratch_lutb/: dut  tran.sp
simulation/scratch_mux/: headers.txt
simulation/scratch_xor2/: dut  tran.sp  tran.sp.csv
src/: '  :2007  :w  README.md  abstract_via.cc  abstract_via.h  blockage_projector.h  c_make_header.h.in  cell.cc  cell.h  cell_reference.h  checkerboard_guide.cc  checkerboard_guide.h  circuit.cc  circuit.h  circuit_primitives_database.cc  circuit_primitives_database.h  design_database.cc  design_database.h  dev_pdk_setup.cc  dev_pdk_setup.h  edge_list.cc  edge_list.h  edge_list_test.cc  equivalent_nets.cc  equivalent_nets.h  equivalent_nets_test.cc  instance.cc  instance.h  layout.cc  layout.h  main.cc  memory_bank.cc  memory_bank.h  modulo.h  parameter.cc  parameter.h  physical_properties_database.cc  physical_properties_database.h  poly_line_cell.cc  (+54 more)
src/atoms/: README.md  atom.h  gf180mcu_mux.cc  gf180mcu_mux.h  sky130_buf.cc  sky130_buf.h  sky130_carry1.cc  sky130_carry1.h  sky130_decap.cc  sky130_decap.h  sky130_dfxtp.cc  sky130_dfxtp.h  sky130_double_buf.cc  sky130_double_buf.h  sky130_hd_mux2_1.cc  sky130_hd_mux2_1.h  sky130_interconnect_mux1.cc  sky130_interconnect_mux1.h  sky130_interconnect_mux2.cc  sky130_interconnect_mux2.h  sky130_interconnect_mux6.cc  sky130_interconnect_mux6.h  sky130_mux.cc  sky130_mux.h  sky130_parameters.h  sky130_passive_mux3.cc  sky130_passive_mux3.h  sky130_simple_transistor.cc  sky130_simple_transistor.h  sky130_simple_transistor_test.cc  sky130_split_buffer.cc  sky130_split_buffer.h  sky130_switch_complex.cc  sky130_switch_complex.h  sky130_tap.cc  sky130_tap.h  sky130_transmission_gate.cc  sky130_transmission_gate.h  sky130_transmission_gate_stack.cc  sky130_transmission_gate_stack.h  (+3 more)
src/circuit/: connection.cc  connection.h  connection_test.cc  external_module.h  instance.cc  instance.h  instance_test.cc  module.h  parameter.h  port.cc  port.h  port_test.cc  qualified_name.h  signal.cc  signal.h  signal_test.cc  slice.cc  slice.h  slice_test.cc  wire.h  wire_test.cc
src/geometry/: abstract_shape.h  arc.cc  arc.h  arc_test.cc  compass.cc  compass.h  group.cc  group.h  group_test.cc  instance.cc  instance.h  instance_test.cc  label.cc  label.h  layer.h  line.cc  line.h  line_segment.h  line_test.cc  manipulable.h  matrix.h  point.cc  point.h  point_or_choice.cc  point_or_choice.h  point_test.cc  poly_line.cc  poly_line.h  poly_line_test.cc  polygon.cc  polygon.h  polygon_test.cc  port.cc  port.h  radian.cc  radian.h  radian_test.cc  rectangle.cc  rectangle.h  rectangle_test.cc  (+10 more)
src/routing/: route_manager.cc  route_manager.h  route_manager_test.cc  routing_blockage_cache.cc  routing_blockage_cache.h  routing_blockage_cache_test.cc  routing_edge.cc  routing_edge.h  routing_edge_test.cc  routing_grid.cc  routing_grid.h  routing_grid_blockage.cc  routing_grid_blockage.h  routing_grid_geometry.cc  routing_grid_geometry.h  routing_grid_geometry_test.cc  routing_layer_info.h  routing_path.cc  routing_path.h  routing_track.cc  routing_track.h  routing_track_blockage.cc  routing_track_blockage.h  routing_track_direction.cc  routing_track_direction.h  routing_track_test.cc  routing_vertex.cc  routing_vertex.h  (+9 more)
test_data/: edge_list.csv  edge_list.pb.txt  edge_spec.pb.txt  sky130.technology.pb
watch_build/: CMakeCache.txt  CTestTestfile.cmake  Makefile  bfg_test  bfg_test[1]_include.cmake  bfg_test[1]_tests.cmake  cmake_install.cmake  inflator_rules.pb.cc  inflator_rules.pb.h  view_script.py
(+388 files in other folders)
